# type-encode

./: Makefile  README.md  type-encode.cabal
src/TypeEncode/: Encode.hs  Plugin.hs  Tests.hs
test/: Auto.hss  Test.hs
