Name:               type-encode
Version:            0.1
Cabal-Version:      >= 1.6
Synopsis:           A HERMIT-based GHC plugin that converts data types to sum-of-products form.
                    Intended for use with lambda-ccc.
Category:           Language
Description:        A HERMIT-based GHC plugin that converts data types to sum-of-products form.
Author:             Conal Elliott
Maintainer:         conal@conal.net
Copyright:          (c) 2014 by Tabula, Inc
License:            BSD3
License-File:       COPYING
Stability:          experimental
build-type:         Simple

Extra-Source-Files:
                    test/Tests.hs
                    test/Auto.hss

source-repository head
  type:             git
  location:         git://github.com/conal/type-encode

Library
  hs-Source-Dirs:   src
  Build-Depends:    base < 5
                  , ghc >= 7.6
                  , ghc-prim
                  , kure   >= 0.4.0.0
                  , hermit >= 0.4.0.0
  Exposed-Modules:
                    TypeEncode.Encode
                    TypeEncode.Plugin
